# expriment

./: CMakeLists.txt
experimental/: CMakeLists.txt  plotTrajectory.cpp  sim.cpp  simple_solver.cpp  solver.cpp  solverFixedLag.cpp  solverLieNum.cpp
experimental/tests/: CMakeLists.txt  imu_integration.cpp
